// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VirtualizedSectionList handles nested lists 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "outer0",
          },
          Object {
            "key": "outer1",
          },
        ],
        "title": "outer",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        data={
          Array [
            Object {
              "data": Array [
                Object {
                  "key": "outer0:inner0",
                },
                Object {
                  "key": "outer0:inner1",
                },
              ],
              "title": "inner",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={false}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
      >
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        />
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <item
            title="outer0:inner0"
          />
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        >
          <item
            title="outer0:inner1"
          />
        </View>
        <View
          onFocusCapture={[Function]}
          onLayout={[Function]}
          style={null}
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <RCTScrollView
        data={
          Array [
            Object {
              "data": Array [
                Object {
                  "key": "outer1:inner0",
                },
                Object {
                  "key": "outer1:inner1",
                },
              ],
              "title": "inner",
            },
          ]
        }
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        keyExtractor={[Function]}
        onContentSizeChange={[Function]}
        onLayout={[Function]}
        onMomentumScrollBegin={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        renderItem={[Function]}
        scrollEventThrottle={50}
        stickyHeaderIndices={Array []}
      >
        <View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          />
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <item
              title="outer1:inner0"
            />
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <item
              title="outer1:inner1"
            />
          </View>
          <View
            onFocusCapture={[Function]}
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          />
        </View>
      </RCTScrollView>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList handles separators correctly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i0",
          },
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
        ],
        "title": "s0",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i0"
        />
        <separator
          highlighted={false}
          leadingItem={
            Object {
              "key": "i0",
            }
          }
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i1",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i1"
        />
        <separator
          highlighted={false}
          leadingItem={
            Object {
              "key": "i1",
            }
          }
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i2",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList handles separators correctly 2`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i0",
          },
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
        ],
        "title": "s0",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i0"
        />
        <separator
          highlighted={true}
          leadingItem={
            Object {
              "key": "i0",
            }
          }
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i1",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i1"
        />
        <separator
          highlighted={true}
          leadingItem={
            Object {
              "key": "i1",
            }
          }
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i2",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList handles separators correctly 3`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i0",
          },
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
        ],
        "title": "s0",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i0"
        />
        <separator
          highlighted={true}
          leadingItem={
            Object {
              "key": "i0",
            }
          }
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i1",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i1"
        />
        <separator
          highlighted={true}
          leadingItem={
            Object {
              "key": "i1",
            }
          }
          press={true}
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i2",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList handles separators correctly 4`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i0",
          },
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
        ],
        "title": "s0",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i0"
        />
        <separator
          highlighted={false}
          leadingItem={
            Object {
              "key": "i0",
            }
          }
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i1",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View>
        <item
          title="i1"
        />
        <separator
          highlighted={false}
          leadingItem={
            Object {
              "key": "i1",
            }
          }
          press={true}
          section={
            Object {
              "data": Array [
                Object {
                  "key": "i0",
                },
                Object {
                  "key": "i1",
                },
                Object {
                  "key": "i2",
                },
              ],
              "title": "s0",
            }
          }
          trailingItem={
            Object {
              "key": "i2",
            }
          }
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        title="i2"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList renders all the bells and whistles 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  ListHeaderComponent={[Function]}
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "id": "0",
          },
          Object {
            "id": "1",
          },
          Object {
            "id": "2",
          },
          Object {
            "id": "3",
          },
          Object {
            "id": "4",
          },
        ],
        "title": "s1",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  getItemLayout={[Function]}
  invertStickyHeaders={true}
  inverted={true}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onRefresh={[MockFunction]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  refreshControl={
    <RefreshControlMock
      onRefresh={[MockFunction]}
      refreshing={false}
    />
  }
  refreshing={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  style={
    Array [
      Object {
        "transform": Array [
          Object {
            "scaleY": -1,
          },
        ],
      },
      undefined,
    ]
  }
>
  <RCTRefreshControl />
  <View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "transform": Array [
            Object {
              "scaleY": -1,
            },
          ],
        }
      }
    >
      <header />
    </View>
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    />
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <View>
        <separator />
        <item
          value="0"
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <View>
        <separator />
        <item
          value="1"
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <View>
        <separator />
        <item
          value="2"
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <View>
        <separator />
        <item
          value="3"
        />
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    >
      <item
        value="4"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column-reverse",
          },
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
        ]
      }
    />
    <View
      onLayout={[Function]}
      style={
        Object {
          "transform": Array [
            Object {
              "scaleY": -1,
            },
          ],
        }
      }
    >
      <footer />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList renders empty list 1`] = `
<RCTScrollView
  data={Array []}
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View />
</RCTScrollView>
`;

exports[`VirtualizedSectionList renders empty list with empty component 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  ListFooterComponent={[Function]}
  ListHeaderComponent={[Function]}
  data={Array []}
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onLayout={[Function]}
    >
      <header />
    </View>
    <empty />
    <View
      onLayout={[Function]}
    >
      <footer />
    </View>
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList renders list with empty component 1`] = `
<RCTScrollView
  ListEmptyComponent={[Function]}
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "hello",
          },
        ],
        "title": "s1",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        value="hello"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`VirtualizedSectionList renders simple list 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "key": "i1",
          },
          Object {
            "key": "i2",
          },
          Object {
            "key": "i3",
          },
        ],
        "title": "s1",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i1"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i2"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <item
        value="i3"
      />
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;
